Fix: [Bug] Color Select illegible in Dark Mode #1693
Added a variable for changing the color of the palette title depending on theme selection to make it readable with the darker themes.

--- a/gui/scss/Obsidian.scss
+++ b/gui/scss/Obsidian.scss
@@ -44,6 +44,8 @@ $sort-tags-bg: #808080;
 
 $toggle-button-off-bg-color: #ffffff;
 
+$change-note-palette-title-color: orange;
+
 // Chat Window
 $chatWhisperColor: #e660f2;
 $chatTextColor: $content-text-color;
